test: add markdown report section snapshots